--- a/1.html
+++ b/1.html
@@ -8,6 +8,6 @@
 </head>
 <body dir="rtl" align="center">
     <h1 >خروجی در consol</h1>
-    <script src="script.js"></script>
+    <script src="1.js"></script>
 </body>
 </html>
